test/data/syntax-errors/conditional-out-of-order.jen
x := 3
if x < 5:
    x = x + 1
else:
    x = x - 1
else if x < 2:
    x = 1
